# carenpnp

./: .dockerignore  .gitignore  FILE_CREATION_REPORT.md  HANDOVER.txt  INSTALL.md  NODE_LOGIC_CHARTS.md  README.md  docker-compose.yml  requirements.lock.txt  requirements.txt  station_config  station_config.example
NoMachine/: README.md  cache_nomachine_debs.sh  install_nomachine_remote_access.sh  remote_ready_ubuntu22.sh
NoMachine/debs/: SHA256SUMS
calibration/: axab_calibration_eyeonhand_09052026.yaml  axab_calibration_eyetohand_12052026.yaml  platform_calibration_robot_platform_1.yaml  relmovl_speed_calibration_14042026.json  relmovl_speed_calibration_14042026_tcp_trace.csv
cell_external_bridge/: README.md  pyproject.toml
cell_external_bridge/config/: station_01.yaml  station_02.yaml
cell_external_bridge/docs/: distributed-deployment.md  external-rabbitmq-communication-guide.md  robot_arm_team_handoff.md
cell_external_bridge/src/cell_external_bridge/: __init__.py  arm_communication.py  bridge.py  config.py  messaging.py  robot_arm_controller.py  runtime_program.py
cell_external_bridge/tests/: conftest.py  test_arm_communication_bridge.py  test_config.py  test_robot_arm_controller.py
config/camera_bringup/: orbbec_cameras.yaml
config/dobot_bringup_v4/: param.json
config/item_perception/: item_detect_eyetohand_selected_profile.txt  item_detect_runtime_settings.yaml  item_detect_selected_profile.txt  item_pick_runtime_settings.json  item_teach_runtime.yaml
config/robot_bringup/: param.json
config/robot_cell_orchestrator/: robot_cell_orchestrator_runtime_settings.yaml  (+1 more)
docker/: Dockerfile  entrypoint.sh
src/aruco_perception/: CMakeLists.txt  README.md  package.xml
src/aruco_perception/include/aruco_perception/: aruco_detector.hpp
src/aruco_perception/launch/: aruco_perception.launch.py
src/aruco_perception/msg/: MarkerDetections.msg
src/aruco_perception/src/: aruco_detector_node.cpp  perception_calibration.cpp
src/bin_perception/: CMakeLists.txt  QUICKSTART.md  README.md  package.xml
src/bin_perception/config/: item_teach.yaml
src/bin_perception/launch/: bin_teach.launch.py  item_detect.launch.py  item_teach.launch.py
src/bin_perception/src/: bin_teach_node.cpp  item_detect_node.cpp  item_teach_node.cpp
src/camera_calibration/: CMakeLists.txt  README.md  package.xml
src/camera_calibration/calib/: axab_calibration_01011970.yaml  axab_calibration_eyeonhand_01011970.yaml
src/camera_calibration/include/camera_calibration/: eye_on_hand_calibrator.hpp
src/camera_calibration/launch/: camera_calibration.launch.py  camera_calibration_gui.launch.py  platform_teach.launch.py
src/camera_calibration/python/camera_calibration_gui/: __init__.py  main.py
src/camera_calibration/scripts/: camera_calibration_gui
src/camera_calibration/src/: calibration_perception.cpp  eye_on_hand_calibrator.cpp  platform_teach_node.cpp
src/debug_servop/debug_servop/: README.md  package.xml  servo_p_debug_gui.py  setup.cfg
src/debug_servop/debug_servop/debug_servop/: servo_p_debug_gui.py
src/debug_servop/debug_servop/launch/: debug_servop.launch.py
src/gripper_control/: README.md  package.xml  setup.py
src/gripper_control/gripper_control/: gripper_control_gui.py
src/gripper_control/launch/: gripper_control.launch.py
src/item_perception/: CMakeLists.txt  QUICKSTART.md  README.md  package.xml
src/item_perception/config/: item_teach.yaml
src/item_perception/launch/: bin_teach.launch.py  item_detect.launch.py  item_detect_eyetohand.launch.py  item_teach.launch.py
src/item_perception/src/: bin_teach_node.cpp  item_detect_eyetohand_node.cpp  item_detect_node.cpp  item_teach_node.cpp
src/item_perception_yolo/: CMakeLists.txt  QUICKSTART.md  README.md  package.xml
src/item_perception_yolo/config/: item_teach.yaml  item_teach_yolo.yaml
src/item_perception_yolo/launch/: bin_teach.launch.py  item_detect.launch.py  item_detect_yolo.launch.py  item_teach.launch.py  item_teach_yolo.launch.py
src/item_perception_yolo/scripts/: item_detect_yolo_node.py  item_teach_yolo_node.py
src/item_perception_yolo/src/: bin_teach_node.cpp  item_teach_node.cpp
src/item_pick/: README.md  package.xml  setup.cfg  setup.py
src/item_pick/item_pick/: __init__.py  item_pick.py
src/item_pick/launch/: item_pick.launch.py
src/motion_debug/: README.md  package.xml  setup.cfg  setup.py
src/motion_debug/launch/: motion_debug.launch.py
src/motion_debug/motion_debug/: __init__.py  motion_debug_gui.py
src/motion_debug/resource/: motion_debug
src/obstacle_perception/: CMakeLists.txt  README.md  package.xml
src/obstacle_perception/include/obstacle_perception/: obstacle_memory_node.hpp  obstacle_perception_node.hpp
src/obstacle_perception/launch/: obstacle_perception.launch.py
src/obstacle_perception/src/: obstacle_memory_node.cpp  obstacle_perception_node.cpp
src/orbbec_camera_launcher/: README.md  package.xml  setup.cfg  setup.py
src/orbbec_camera_launcher/launch/: camera_headless.launch.py  camera_launcher.launch.py
src/orbbec_camera_launcher/orbbec_camera_launcher/: camera_launcher_gui.py  camera_watchdog.py
src/orbbec_camera_launcher/scripts/: camera_launcher_gui
src/orbbec_camera_launcher/test/: test_camera_watchdog.py
src/platform_calibration/: CMakeLists.txt  README.md  package.xml
src/platform_calibration/launch/: platform_calibration.launch.py
src/platform_calibration/src/: platform_calibration_node.cpp
src/robot_cell_orchestrator/: README.md  package.xml  setup.cfg  setup.py
src/robot_cell_orchestrator/launch/: robot_cell_orchestrator.launch.py  robot_runtime_headless.launch.py
src/robot_cell_orchestrator/resource/: robot_cell_orchestrator
src/robot_cell_orchestrator/robot_cell_orchestrator/: __init__.py  robot_cell_orchestrator_gui.py
src/tray_perception/: CMakeLists.txt  QUICKSTART.md  README.md  package.xml
src/tray_perception/config/: tray_detector.yaml
src/tray_perception/launch/: tray_detect.launch.py  tray_teach.launch.py
src/tray_perception/src/: tray_detect_node.cpp  tray_detector_node.cpp
(+147 files in other folders)
