<?xml version="1.0"?>
<package format="3">
  <name>camera_calibration</name>
  <version>0.0.1</version>
  <description>Eye-on-hand and eye-to-hand AX=XB calibration utilities.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>aruco_perception</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rcl_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>aruco_perception</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_eigen</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>dobot_msgs_v4</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
