<?xml version="1.0"?>
<package format="3">
  <name>item_perception_yolo</name>
  <version>0.0.1</version>
  <description>YOLO/SAM2 item perception tools using the bin ROI workflow.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>dobot_msgs_v4</depend>
  <depend>aruco_perception</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>
  <depend>qtbase5-dev</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
