<?xml version="1.0"?>
<package format="3">
  <name>robot_cell_orchestrator</name>
  <version>0.0.1</version>
  <description>Robot cell orchestrator GUI and online API for coordinating production pick/place flow.</description>
  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>dobot_msgs_v4</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>orbbec_camera_launcher</exec_depend>
  <exec_depend>item_perception</exec_depend>
  <exec_depend>item_pick</exec_depend>
  <exec_depend>tray_perception</exec_depend>
  <exec_depend>tray_intercept</exec_depend>
  <exec_depend>dobot_rviz</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
